--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -63,7 +63,7 @@ Then I realized the structure lacks lateral support, so I carved out two lateral
 
 In this way, the cutout piece is of regular shape and the material is efficiently used. The vision is that the middle division line of the design will change accordingly to the user's requirement of different veiwing angles. After the angle of the middle division line is set, a new minimum bounding box will be generted, and the lateral support piece will be added on correspondingly.
 
-<br>
+---
 
 # 2️⃣: Wireframe walkthrough in Grasshopper
 
@@ -112,9 +112,9 @@ Extrude the lateral support into 3D objects and locate them to the 3D vertical s
 <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_final.png">
 </p>
 
-<br>
+---
 
-# 3️⃣: Laser cut and Assemble
+# 3️⃣: Laser cut
 #### After I finish with the Grasshopper file, I baked two sets of 2D cellphone stand into illustrator file for lasercut: one is of `45 degrees` and the other is of `70 degrees`, and bring them to lasercut. 
 
 <p align="center">
@@ -126,4 +126,25 @@ Extrude the lateral support into 3D objects and locate them to the 3D vertical s
 <p align="center">
  <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/laser cutting.png">
 </p>
+
+---
+
+# 4️⃣: Assemble and Display
+#### The final step is to assemble the cutout pieces into 3D functional cell phone stand.
+
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/finaldisplay4.jpg">
+</p>
+
+<p align="center">
+ <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/Assemble.gif">
+</p>
+
+<p align="center">
+ <img width="500" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/finaldisplay2.JPG"> <img width="500" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/finaldisplay1.JPG">
+</p>
+
+---
+
+# 💡 Reflection
 
