--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -23,7 +23,7 @@ My design is mainly build upon the 2D laser cutting version cell phone stand pro
  <img width="650" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Layour waste.png">
 </p>
 
-As can be seen, despite the cutout area hatched in black, there are plenty of waste material resulted from the inefficient form. A plywood piece with the dimension of 1/4" x 18" x 30" can only produce a maximum of 7 sets of cell phone stands. What is even worse is that the leftover scratches are all of irregular shapes, which make them difficult to be reused in other projects.
+As can be seen, despite the cutout area hatched in black, there is plenty of waste material resulting from the inefficient form. A plywood piece with the dimension of 1/4" x 18" x 30" can only produce a maximum of 7 sets of cell phone stands. What is even worse is that the leftover scratches are all of irregular shapes, which make them difficult to be reused in other projects.
 
 <p align="center">
  <img width="650" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/leftover.png">
