--- a/weekly-reports/2023_09_07report.md
+++ b/weekly-reports/2023_09_07report.md
@@ -148,7 +148,7 @@ Then I realized the structure lacks lateral support, so I carved out two lateral
 In this way, the cutout piece is of regular shape and the material is efficiently used. The vision is that the middle division line of the design will change accordingly to the user's requirement of different veiwing angles. After the angle of the middle division line is set, a new minimum bounding box will be generted, and the lateral support piece will be added on correspondingly.
 
 
-###  :fast_forward: Progressing process of the layout ###
+###  :fast_forward: Progressing process of the design ###
 <p align="center">
  <img width="1000" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-2/Progressing.png">
 </p>
