--- a/weekly-reports/2023_09_14report.md
+++ b/weekly-reports/2023_09_14report.md
@@ -74,7 +74,7 @@ In this way, the cutout piece is of regular shape and the material is efficientl
  <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/GH_zigzagline.png">
 </p>
 
-#### 2️⃣ : The second step is to rotate the zig-zag line component to the desired angle. The angle is adjusted as `Viewing Angle'. And then make the 2D outlint into 3D volumn and rotate and move the two vertical stands into the right position in relationship to the 3D tilted phone model.
+#### 2️⃣ : The second step is to rotate the zig-zag line component to the desired angle. The angle is adjusted as `Viewing Angle'. And then make the 2D outline into 3D volume and rotate and move the two vertical stands into the right position in relation to the 3D tilted phone model.
 
 <p align="center">
 <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/ghprocess_2.gif" width="700">
@@ -115,7 +115,7 @@ Extrude the lateral support into 3D objects and locate them to the 3D vertical s
 ---
 
 # 3️⃣: Laser cut
-#### After I finish with the Grasshopper file, I baked two sets of 2D cellphone stand into illustrator file for lasercut: one is of `45 degrees` and the other is of `70 degrees`, and bring them to lasercut. 
+#### After I finished with the Grasshopper file, I baked two sets of 2D cell phone stands into an illustrator file for laser cut: one is of `45 degrees` and the other is of `70 degrees`, and brought them to laser cut. 
 
 <p align="center">
 <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/lasercut.png">
@@ -130,7 +130,7 @@ Extrude the lateral support into 3D objects and locate them to the 3D vertical s
 ---
 
 # 4️⃣: Assemble and Display
-#### The final step is to assemble the cutout pieces into 3D functional cell phone stand.
+#### The final step is to assemble the cutout pieces into a 3D functional cell phone stand.
 
 <p align="center">
  <img width="700" src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-3/finaldisplay4.jpg">
