--- a/weekly-reports/2023_09_21report.md
+++ b/weekly-reports/2023_09_21report.md
@@ -1,1 +1,26 @@
+---
+# Report 4 - Week of 09/21/2023 #
 
+### This week report will be a brief documentation of me following the Photon 2 tutorial to set up my Photon 2 and connect it to Wi-Fi.
+
+<br>
+
+---
+
+## 1️⃣ Initial Set up
+- Create a particle account 
+
+<p align="center">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/photon_register2.png">
+</p>
+
+- follow the steps at [setup.particle.io](https://setup.particle.io/) to set up my Photon 2
+<p align="center">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/photon_register1.png">
+
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/photon_setup2.png">
+ 
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/photon_register3.png">
+ 
+<img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/photon_register4.png">
+</p>
