--- a/weekly-reports/2023_09_21report.md
+++ b/weekly-reports/2023_09_21report.md
@@ -24,3 +24,58 @@
  
 <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/photon_register4.png">
 </p>
+
+---
+
+## 2️⃣ Configure Wifi at home ##
+
+I navigated to the to Particle Configure Wi-Fi page and followed the prompt to setup wifi credential
+
+<p align="center">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/IoT-Connection.png">
+
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/IoT_Connection2.png">
+ 
+</p>
+
+---
+
+## 3️⃣ Get MAC address ##
+
+I copied the following code into the Particle Web IDE:
+
+```
+void setup() {
+  Serial.begin();
+}
+
+void loop() {
+  byte mac[6];
+  WiFi.macAddress(mac);
+  for (int i=0; i<6; i++) 
+    Serial.printf("%02x%s", mac[i], i != 5 ? ":" : "\r\n");
+  delay(1000);
+}
+```
+<p align="center">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/flashcode.png">
+
+</p>
+
+and then I flashed it to my Photon 2 and then use the Particle USB serial debug log to get my MAC address
+
+<p align="center">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/MAC_serial.png">
+
+</p>
+
+## 4️⃣ Register MAC address with Berkeley IoT Wi-Fi
+
+I added my device in my UC Berkeley Wi-Fi Portal under "Berkeley-IoT Wi-Fi Network Devices" and successfully register my Photon 2 to Berkeley IoT Wifi
+
+<p align="center">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/wifi_register.png">
+<img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-4/wifi_register2.png">
+</p>
+
+## 5️⃣ Connect Photon 2 to Berkeley IoT Wi-Fi
