--- a/weekly-reports/2023_09_28report.md
+++ b/weekly-reports/2023_09_28report.md
@@ -1,1 +1,32 @@
+---
+# Report 5 - Week of 09/28/2023 #
 
+### This week is about the ideation process for Project 2: Digital Ecosystem Demo
+
+---
+
+## 1️⃣ Ideation for "Energy" on Monday lecture
+
+During Monday lecture, I was assigned to Group 7 with the topic of "Energy" for the initial brainstroming.
+
+<p align="center">
+ <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-5/1000012015.jpg">
+</p>
+
+Our brainstormed ideas can be categorized into 2 different groups:
+1. Energy saving
+2. Visualizing energy
+
+And we have four different types of users:
+1. Individual
+2. Big company
+3. Household
+4. Kids
+
+Finally, we came up with four ideas for four different scenarios: 
+1. An online educational system portraying energy use and methods of energy conservation for children to learn more about energy and energy saving.
+2. An system converting the intangible energy save into some tangible data which is more comprehensive for general public so that they can get a better idea of how much energy they save.
+3. Creating a small carbon trading center and platform aimed at individuals within a community can empower citizens to take actionable steps toward energy conservation and carbon footprint reduction. 
+4. Visualizing the intangible energy in the nature, like radiation, air flow, heat flow, for users to actually "see" the energy flow.
+
+You can also read the ideation [here](https://docs.google.com/document/d/15yqaBpmKhFaIFV7C4fQk_wjDyt0rFPBzhFy6_27PEAA/edit) at Google doc
