--- a/weekly-reports/2023_09_28report.md
+++ b/weekly-reports/2023_09_28report.md
@@ -7,7 +7,7 @@
 
 ## 1️⃣ Ideation for "Energy" on Monday lecture
 
-During Monday lecture, I was assigned to Group 7 with the topic of "Energy" for the initial brainstroming.
+During Monday lecture, I was assigned to Group 7 with the topic of "Energy" for the initial brainstorming.
 
 <p align="center">
  <img width="650"  src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-5/1000012015.jpg">
@@ -30,3 +30,11 @@ Finally, we came up with four ideas for four different scenarios:
 4. Visualizing the intangible energy in the nature, like radiation, air flow, heat flow, for users to actually "see" the energy flow.
 
 You can also read the ideation [here](https://docs.google.com/document/d/15yqaBpmKhFaIFV7C4fQk_wjDyt0rFPBzhFy6_27PEAA/edit) at Google doc
+
+---
+
+## 2️⃣ Pick the most interesting ideation for me
+
+I personally was not very interested in the energy topic since I was sort of bounded by my architecture background. The energy saving was already much discussed in the architecture field and hence I want to try something new for this project.
+
+I was first drawn to the idea of meditation flower in "
