--- a/weekly-reports/2023_09_28report.md
+++ b/weekly-reports/2023_09_28report.md
@@ -37,4 +37,8 @@ You can also read the ideation [here](https://docs.google.com/document/d/15yqaBp
 
 I personally was not very interested in the energy topic since I was sort of bounded by my architecture background. The energy saving was already much discussed in the architecture field and hence I want to try something new for this project.
 
-I was first drawn to the idea of meditation flower in "
+I was first drawn to the idea of meditation flower in "Health" section, which is `Mindful Meditations: An interactive Flower Guide for Stress Relief and Color Therapy Tracking`. It reminds me of the old defualt voice player of windows system which will showcase colorful pattern that change according to the beat of the music played. I think it will be interesting to make this into a physical reactive device that physcially reacts to sound.
+
+For the same reason, I was also drawn to the `Exploring Laser Wind Chimes: Enhancing Entertainment & Recreation through Sound and Visual Artisty` in "Recreation and Entertainment" section. It would also be intriguing to create an interactive device that translates between sound and the visual. 
+
+The last one I chose is `Enhancing Home Security: Exploring Cheap and Removable Door Lock Sensors for Share Household and Renters` in "Home" section. I am deeply related to this topic since I also have the very traditional door locker that can be opened with only a key. It is very inconvenient since sometimes I forget my key and get easily locked out of my home. I feel this is a very realistic question and I am excited to explore how to solve this question by myself with the help of Photon2.
