--- a/weekly-reports/2023_10_12report.md
+++ b/weekly-reports/2023_10_12report.md
@@ -1,1 +1,9 @@
+# Report 7 - Week of 10/12/2023 #
 
+### During this week, I worked on constructing the Rhino model for our mindful meditation Bloom.
+### The difficulty mainly lies in the following points:
+1. 
+---
+
+### You can read the deisgn specification [here](https://docs.google.com/document/d/1IRLeagtgZijVZ8jcxHtoBIZcy9kE9jKGmdVBJSnqfk4/edit) at Google doc
+The specification will be updated to markdown file later if required. 😎
