--- a/weekly-reports/2023_10_05report.md
+++ b/weekly-reports/2023_10_05report.md
@@ -11,10 +11,12 @@
 The first challenge is to figure out the mechanism of the physical flower.  We went through a lot of initial research and found two different methods to achieve the opening up and closing effect: 
 1. one is through rotation that drags the petal to close up
    <p align="center">
-   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/rotation 1.gif" width="700">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/rotation 1.gif" width="500">
    </p>
 2. and the other is vertical movement forcing the branch to spread out like an umbrella.
-
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/rotation 2.gif" width="500">
+   </p>
 
 
 ### You can read the deisgn specification [here](https://docs.google.com/document/d/1IRLeagtgZijVZ8jcxHtoBIZcy9kE9jKGmdVBJSnqfk4/edit) at Google doc
