--- a/weekly-reports/2023_10_05report.md
+++ b/weekly-reports/2023_10_05report.md
@@ -8,7 +8,10 @@
 
 ---
 
-The first challenge is to figure out the mechanism of the physical flower.  We went through a lot of initial research and found two different methods to achieve the opening up and closing effect: 
+The first challenge is to figure out the mechanism of the physical flower.  We went through a lot of initial research and found two different methods to achieve the opening up and closing effect
+<p align="center">
+<img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/figma board_research.png" width="700">
+</p>
 1. one is through rotation that drags the petal to close up
    <p align="center">
    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/rotation 1.gif" width="500">
@@ -18,6 +21,15 @@ The first challenge is to figure out the mechanism of the physical flower.  We w
    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/rotation 2.gif" width="500">
    </p>
 
+After a group discussion and a rough prototype, we collectively decided to go with the rotation mechanism, for we think it is easier to put into practice considering the limited time we are given. 
+
+Below is the first quick “rough” test model we made for this. Basically there is a central rotating disc with each petal attached to it by a piece of string. The distance between the two attachment points doesn’t change, so when the disc rotates, the straight-line distance decreases, petals are pulled inward. 
+
+ <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/initial movement test.gif" width="600">
+   </p>
+
+---
 
 ### You can read the deisgn specification [here](https://docs.google.com/document/d/1IRLeagtgZijVZ8jcxHtoBIZcy9kE9jKGmdVBJSnqfk4/edit) at Google doc
 The specification will be updated to markdown file later if required. 😎
