--- a/weekly-reports/2023_10_05report.md
+++ b/weekly-reports/2023_10_05report.md
@@ -8,6 +8,8 @@
 
 ---
 
+## 👀.Research ##
+
 The first challenge is to figure out the mechanism of the physical flower.  We went through a lot of initial research and found two different methods to achieve the opening up and closing effect
 <p align="center">
 <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/figma board_research.png" width="700">
@@ -22,7 +24,9 @@ The first challenge is to figure out the mechanism of the physical flower.  We w
    </p>
 
 After a group discussion and a rough prototype, we collectively decided to go with the rotation mechanism, for we think it is easier to put into practice considering the limited time we are given. 
+---
 
+## 🔨.Sketch Model ##
 Below is the first quick “rough” test model we made for this. Basically there is a central rotating disc with each petal attached to it by a piece of string. The distance between the two attachment points doesn’t change, so when the disc rotates, the straight-line distance decreases, petals are pulled inward. 
 
  <p align="center">
