--- a/weekly-reports/2023_10_05report.md
+++ b/weekly-reports/2023_10_05report.md
@@ -24,14 +24,17 @@ The first challenge is to figure out the mechanism of the physical flower.  We w
    </p>
 
 After a group discussion and a rough prototype, we collectively decided to go with the rotation mechanism, for we think it is easier to put into practice considering the limited time we are given. 
+
 ---
 
-## 🔨.Sketch Model ##
-Below is the first quick “rough” test model we made for this. Basically there is a central rotating disc with each petal attached to it by a piece of string. The distance between the two attachment points doesn’t change, so when the disc rotates, the straight-line distance decreases, petals are pulled inward. 
+## ✋.Sketch Model ##
+To test out if the mechanism really work, we did a quick sketch model during the class time. Below is the first quick “rough” test model we made for this. 
 
  <p align="center">
    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/initial movement test.gif" width="600">
    </p>
+
+Basically there is a central rotating disc with each petal attached to it by a piece of string. The distance between the two attachment points doesn’t change, so when the disc rotates, the straight-line distance decreases, petals are pulled inward.
 
 ---
 
