--- a/weekly-reports/2023_10_05report.md
+++ b/weekly-reports/2023_10_05report.md
@@ -36,6 +36,12 @@ To test out if the mechanism really work, we did a quick sketch model during the
 
 Basically there is a central rotating disc with each petal attached to it by a piece of string. The distance between the two attachment points doesn’t change, so when the disc rotates, the straight-line distance decreases, petals are pulled inward.
 
+To enhance the visual impact and make the flower appear more stunning, I decided to duplicate the mechanism into multiple layers of petals. Here is a quick sketch of me envisioning the final design of our physical flower.
+
+ <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-6/sketch.png" width="700">
+   </p>
+
 ---
 
 ### You can read the deisgn specification [here](https://docs.google.com/document/d/1IRLeagtgZijVZ8jcxHtoBIZcy9kE9jKGmdVBJSnqfk4/edit) at Google doc
