--- a/weekly-reports/2023_10_12report.md
+++ b/weekly-reports/2023_10_12report.md
@@ -1,8 +1,18 @@
 # Report 7 - Week of 10/12/2023 #
 
-### During this week, I worked on constructing the Rhino model for our mindful meditation Bloom.
+### During this week, I worked on constructing the Rhino model for our mindful meditation Bloom and the first full-scale model test out with the help from Adorey.
+
 ### The difficulty mainly lies in the following points:
-1. 
+1. Make the structure/skeleton to be strong and rigid
+2. Anchor the servo at a proper location to trigger the entire movement of petals
+3. Properly attach petals to the structure so that they can rotate smoothly but within constraint
+4. Connect the central rotation disc with the petals with fishing line. Properly control the distance between each layer of petals by making a knot on fishing line under each petal.
+5. Attach the central rotation disc with the servo to see if the servo can actually pull up the petals via rotation.
+
+In order to make the actual fabrication process smoother, I decided to make the 3D model first in Rhino. The Rhino Model also served as a rough measurement of the rotation angle of the petals, The below images show the two status of flower opening and closing up.
+
+Here is the 3D model of the flower structure in Rhino. There are four vertical spines supporting five rings (shown in red), each ring has 8 petals. Servo is placed on top level with a rotating disc attached to its head with two inner platforms slotted into the vertical spine to anchor the servo.
+
 ---
 
 ### You can read the deisgn specification [here](https://docs.google.com/document/d/1IRLeagtgZijVZ8jcxHtoBIZcy9kE9jKGmdVBJSnqfk4/edit) at Google doc
