--- a/weekly-reports/2023_10_12report.md
+++ b/weekly-reports/2023_10_12report.md
@@ -9,9 +9,19 @@
 4. Connect the central rotation disc with the petals with fishing line. Properly control the distance between each layer of petals by making a knot on fishing line under each petal.
 5. Attach the central rotation disc with the servo to see if the servo can actually pull up the petals via rotation.
 
-In order to make the actual fabrication process smoother, I decided to make the 3D model first in Rhino. The Rhino Model also served as a rough measurement of the rotation angle of the petals, The below images show the two status of flower opening and closing up.
+In order to make the actual fabrication process smoother, I decided to make the 3D model first in Rhino. The Rhino Model also served as a rough measurement of the rotation angle of the petals. The below images show the two status of flower opening and closing up.
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/Rhino Model 1.png" width="700">
+  <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/Rhino Model 2.png" width="700">
+   </p>
 
 Here is the 3D model of the flower structure in Rhino. There are four vertical spines supporting five rings (shown in red), each ring has 8 petals. Servo is placed on top level with a rotating disc attached to its head with two inner platforms slotted into the vertical spine to anchor the servo.
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/Rhino Model 3.png" width="700">
+  <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/Rhino Model 4.png" width="700">
+   </p>
 
 ---
 
