--- a/weekly-reports/2023_10_05report.md
+++ b/weekly-reports/2023_10_05report.md
@@ -8,6 +8,34 @@
 
 ---
 
+## Introduction of the Project ##
+
+I am in the group of Mindful Meditation. My teammates are Adorey Shen, Jade/ Hyeryong Kim, Baurzhan Abenov, Xingchen Cao, and Maria-Teresa Carmier Villalobos. We collectively decided to work on making a device called Meditation Bloom. 
+
+Meditation Bloom aims to amalgamate technology, aesthetic, and mindfulness, crafting a transformative physical and mental experience. It is a meditation-assistive device that provides a multi-sensory experience by integrating visual, tactile, and audial cues, thus enhancing the user's focus and immersion during the meditation process.
+### 🧩. Components
+1. #### Meditation Flower 
+
+   **~Function:~** 
+   Opens and closes in synchronization with the prescribed meditation breathing pattern.
+   **~Design:~** 
+   Resembling a delicate flower that blooms and retreats, providing a visually calming and metaphorically rich imagery.
+   **~Technology:~**
+   Utilizes mechanical petals that are controlled by a microcontroller, ensuring smooth and synchronized movement.
+   **~Lighting:~**
+   Subtle and adjustable lighting that complements meditation moods and provides ambience.
+
+2. #### Vibration Wristband
+
+   **~Function:~** 
+   Vibrates subtly, aligning with the meditation breathing pace and providing tactile feedback for breathing synchronization.
+   **~Design:~** 
+   Ergonomic, lightweight, and non-intrusive, ensuring comfort and aesthetic appeal.
+   **~Technology:~**
+   Employs a precision haptic motor which can adjust vibration intensity and pattern, to avoid startling the user and to align accurately with the
+meditation rhythm.
+
+### . Challenge
 ## 👀.Research ##
 
 The first challenge is to figure out the mechanism of the physical flower.  We went through a lot of initial research and found two different methods to achieve the opening up and closing effect
