--- a/weekly-reports/2023_10_05report.md
+++ b/weekly-reports/2023_10_05report.md
@@ -16,26 +16,49 @@ Meditation Bloom aims to amalgamate technology, aesthetic, and mindfulness, craf
 ### 🧩. Components
 1. #### Meditation Flower 
 
-   **~Function:~** 
+   **Function:**
+   
    Opens and closes in synchronization with the prescribed meditation breathing pattern.
-   **~Design:~** 
+   
+   **Design:**
+   
    Resembling a delicate flower that blooms and retreats, providing a visually calming and metaphorically rich imagery.
-   **~Technology:~**
+   
+   **Technology:**
+   
    Utilizes mechanical petals that are controlled by a microcontroller, ensuring smooth and synchronized movement.
-   **~Lighting:~**
+   
+   **Lighting:**
+   
    Subtle and adjustable lighting that complements meditation moods and provides ambience.
 
 2. #### Vibration Wristband
 
-   **~Function:~** 
+   **Function:**
+   
    Vibrates subtly, aligning with the meditation breathing pace and providing tactile feedback for breathing synchronization.
-   **~Design:~** 
+   
+   **Design:**
+   
    Ergonomic, lightweight, and non-intrusive, ensuring comfort and aesthetic appeal.
-   **~Technology:~**
+   
+   **Technology:**
+   
    Employs a precision haptic motor which can adjust vibration intensity and pattern, to avoid startling the user and to align accurately with the
 meditation rhythm.
 
-### . Challenge
+### 💭.Challenge
+
+The main challenge of our project includes:
+```
+1. A smooth mechanism for the Meditation Bloom to open and close up.
+2. Robust and quiet motor for the Meditation Bloom to ensure non-disruptive drive of the mechanical part.
+3. A reliable communication protocol between the Meditation Flower, wristband, and app, ensuring synchronized operation.
+4. High-precision haptic technology in the wristband for subtle and accurate vibrations.
+```
+
+---
+
 ## 👀.Research ##
 
 The first challenge is to figure out the mechanism of the physical flower.  We went through a lot of initial research and found two different methods to achieve the opening up and closing effect
