--- a/weekly-reports/2023_10_12report.md
+++ b/weekly-reports/2023_10_12report.md
@@ -25,5 +25,9 @@ Here is the 3D model of the flower structure in Rhino. There are four vertical s
 
 ---
 
+### 🔨. Model Making
+After setting down with the design in Rhino, we started the first test of the physical model. I was mainly in charge of the model making, with assistance from Adorey and Jade.
+I first laser cut the acrylic for the skeleton (the four vertical spine and fiver layers of rings), along with the base and the supporting layers for servo.  
+
 ### You can read the deisgn specification [here](https://docs.google.com/document/d/1IRLeagtgZijVZ8jcxHtoBIZcy9kE9jKGmdVBJSnqfk4/edit) at Google doc
 The specification will be updated to markdown file later if required. 😎
