--- a/weekly-reports/2023_10_12report.md
+++ b/weekly-reports/2023_10_12report.md
@@ -2,6 +2,8 @@
 
 ### During this week, I worked on constructing the Rhino model for our mindful meditation Bloom and the first full-scale model test out with the help from Adorey.
 
+---
+
 ### The difficulty mainly lies in the following points:
 1. Make the structure/skeleton to be strong and rigid
 2. Anchor the servo at a proper location to trigger the entire movement of petals
@@ -9,25 +11,71 @@
 4. Connect the central rotation disc with the petals with fishing line. Properly control the distance between each layer of petals by making a knot on fishing line under each petal.
 5. Attach the central rotation disc with the servo to see if the servo can actually pull up the petals via rotation.
 
+---
+
 In order to make the actual fabrication process smoother, I decided to make the 3D model first in Rhino. The Rhino Model also served as a rough measurement of the rotation angle of the petals. The below images show the two status of flower opening and closing up.
+
+</br>
 
    <p align="center">
    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/Rhino Model 1.png" width="700">
   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/Rhino Model 2.png" width="700">
    </p>
 
+</br>
+
 Here is the 3D model of the flower structure in Rhino. There are four vertical spines supporting five rings (shown in red), each ring has 8 petals. Servo is placed on top level with a rotating disc attached to its head with two inner platforms slotted into the vertical spine to anchor the servo.
+
+</br>
 
    <p align="center">
    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/Rhino Model 3.png" width="700">
   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/Rhino Model 4.png" width="700">
    </p>
 
+   </br>
+
 ---
 
 ### 🔨. Model Making
 After setting down with the design in Rhino, we started the first test of the physical model. I was mainly in charge of the model making, with assistance from Adorey and Jade.
 I first laser cut the acrylic for the skeleton (the four vertical spine and fiver layers of rings), along with the base and the supporting layers for servo.  
+
+</br>
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/ai laser cut_1.png" width="600">
+   </p>
+
+</br>
+
+Next, the challenging phase began. Despite my meticulous planning, which included accounting for the laser beam's error margin and the lap joint, unexpected issues arose during the assembly.
+
+To begin with, the design featured supporting layers for the servo attached to the inner side of the vertical spine, while the five rings for the petals were affixed to the outer side. This configuration was meant to provide structural strength by subjecting it to both internal and external forces. However, this robust structure posed challenges during assembly. Due to the tight fit of all components, attaching an additional ring layer to the spine became a cumbersome task. Furthermore, the size of the servo did not align with the pre-cut acrylic base, causing further complications.
+
+</br>
+
+   <p align="center">
+    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/fetal frame_2.jpg" width="450"> <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/trial1_fetal.jpg" width="450">
+   </p>
+
+</br>
+
+However, the primary challenge lay in achieving smooth and unidirectional petal movement using cost-effective connections. We experimented with hand-bent wire rings, fishing line, and ultimately opted for zip ties. The added advantage of the zip tie was that its head prevented the petal from descending below the horizontal level.
+
+</br>
+
+   <p align="center">
+    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/metal ring.png" width="300"> <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/fishing line ring.png" width="300"> <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-7/zip tie ring.png" width="300">
+   </p>
+
+</br>
+
+---
+
+### That's it for this week's progress on the Mindful Blossom, and next week we will start the construction of the final product
+
+---
 
 ### You can read the deisgn specification [here](https://docs.google.com/document/d/1IRLeagtgZijVZ8jcxHtoBIZcy9kE9jKGmdVBJSnqfk4/edit) at Google doc
 The specification will be updated to markdown file later if required. 😎
