--- a/weekly-reports/2023_10_19report.md
+++ b/weekly-reports/2023_10_19report.md
@@ -1,3 +1,18 @@
-# Project 2 Reflection
-***
-1. Project Overview
+# Report 7 - Week of 10/12/2023 #
+
+### During this week, I worked on the final construction of the meditation flower and assited the documentation of the project and video-editing of the final video presentation.
+
+---
+
+### 🔨. Model Making
+After setting down with the design in Rhino, we started the first test of the physical model. I was mainly in charge of the model making, with assistance from Adorey and Jade.
+I first laser cut the acrylic for the skeleton (the four vertical spine and fiver layers of rings), along with the base and the supporting layers for servo. 
+
+</br>
+
+
+Next, the challenging phase began. Despite my meticulous planning, which included accounting for the laser beam's error margin and the lap joint, unexpected issues arose during the assembly.
+
+To begin with, the design featured supporting layers for the servo attached to the inner side of the vertical spine, while the five rings for the petals were affixed to the outer side. This configuration was meant to provide structural strength by subjecting it to both internal and external forces. However, this robust structure posed challenges during assembly. Due to the tight fit of all components, attaching an additional ring layer to the spine became a cumbersome task. Furthermore, the size of the servo did not align with the pre-cut acrylic base, causing further complications.
+
+</br>
