--- a/weekly-reports/2023_10_19report.md
+++ b/weekly-reports/2023_10_19report.md
@@ -5,14 +5,106 @@
 ---
 
 ### 🔨. Model Making
-After setting down with the design in Rhino, we started the first test of the physical model. I was mainly in charge of the model making, with assistance from Adorey and Jade.
-I first laser cut the acrylic for the skeleton (the four vertical spine and fiver layers of rings), along with the base and the supporting layers for servo. 
+Thanks to the lesson learn from the first fetal test, the fabrication process for the final design went smoother. I changed the laser cutting file a little bit to include the holes for zip tie and fishing line on each petal. And I also spray painted the petals with satin white to give a cleaner look.
 
 </br>
 
-
-Next, the challenging phase began. Despite my meticulous planning, which included accounting for the laser beam's error margin and the lap joint, unexpected issues arose during the assembly.
-
-To begin with, the design featured supporting layers for the servo attached to the inner side of the vertical spine, while the five rings for the petals were affixed to the outer side. This configuration was meant to provide structural strength by subjecting it to both internal and external forces. However, this robust structure posed challenges during assembly. Due to the tight fit of all components, attaching an additional ring layer to the spine became a cumbersome task. Furthermore, the size of the servo did not align with the pre-cut acrylic base, causing further complications.
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/laser cut_2.png" width="500">
+   </p>
 
 </br>
+
+After we assembled the skeleton and anchored the servo successfully, the next challenge is to attached the petals properly to the central rotation disc. In order to make the mechanism to work,  the distance between each set of petals (one petal on each 5 ring, so 5 petals count as a set) should be the same and non-movable. Therefore, we use fishing line to connect all the petals set by set, layer by layer, with hot glue gun and super glue to make a “knot” to properly anchor the fishing line on the petals.
+
+</br>
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/skeleton.png" height="350">
+    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/hand demonstrate.png" height="350">
+   </p>
+
+</br>
+
+---
+
+### 🤪. Success…but with a light setback
+
+I was super aware of the fact that even though the rotation mechanism worked by itself, it might not work when it is actually connected to the servo. Therefore, Adorey and I was constantly testing with the servo when we were assembly the flower. The servo worked perfectly when we attached it with one set of flower petals.
+
+</br>
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/test flower_1.png" height="400">
+    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/test flower_2.png" height="400">
+   </p>
+
+</br>
+
+The mechanism continued to work when two sets of flower petals were attached.
+
+</br>
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/test flower_3.png" height="450">
+    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/test flower_4.png" height="450">
+   </p>
+
+</br>
+
+However, to my surprise, the servo didn’t provide enough torque for all sets of flower petals to work. We even tried external power supply with 6 voltages, but the torque the servo was able to provide didn’t seem to change a lot. 
+
+</br>
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/failed flower_1.png" width="400">
+    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/failed flower_2.png" width="400">
+   </p>
+
+</br>
+
+Finally, we decided to cut off the strings that connected to the bottom three layers of petals. The servo successfully pulled up the top two layers of petals. The below images show the demonstration for the final design.
+
+</br>
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/final_1.png" width="500">
+    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/final_2.png" width="500">
+   </p>
+
+</br>
+
+Besides, I was also in charge of collecting and organizing all the videos and pictures for the project except for the coding part.  also took on the responsibility of editing the introductory and mechanism sections of the presentation video’s first half.
+
+---
+
+## Speculation
+
+Currently, we are only able to achieve the effect of syncing between the flower and the wristband with a set breathing pattern in the code as shown below. 
+
+</br>
+
+   <p align="center">
+   <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/vibrator_code2.jpg" width="700">
+    <img src="https://github.com/Berkeley-MDes/tdf-fa23-Heziaaaaa/blob/main/image/week-8/vibrator_code3.jpg" width="700">
+   </p>
+
+</br>
+
+Therefore, it is not actually reacting to any input source, like a clip of meditation music or meditation breathing guide, coordinately, which make the device not that intuitive to use.
+
+To further develop this project, the user flow should be as follow:
+1. The user initiates a meditation session via a mobile application, selecting or customizing their breathing pattern and pace.
+2. The selected pattern will be transform into a set of data of {breath, hold, breath, hold…}, which is sent synchronically to the flower and the wristband.
+3. The Meditation Blossom responds by opening and closing in tandem with the selected breathing pattern, while simultaneously illuminating to establish a serene environment.
+4. The wristband vibrates in sync with the pattern, providing tactile cues to assist the user in maintaining the prescribed breathing rhythm.
+
+Also, due to the time limit and the limitation of the maximum voltage, we didn’t add the lighting effect to the flower. It will be interesting to work out how to have one more lighting device synced with the vibrator and the servo.
+
+---
+
+## Reflection
+
+I feel that my team and I collaborated seamlessly within our limited timeframe, successfully turning our ideas into reality. However, if there's room for improvement, I would point to communication and time management. Since our team had more members compared to others, it was sometimes challenging to coordinate and ensure that all team members were up-to-date with the information. There was a lack of clear coordination regarding team members' expectations for the project and the level of effort they wanted to contribute, which occasionally resulted in uneven distribution of tasks.
+
+Personally, I believe I tended to stick to what I was already familiar with, not fully challenging myself in areas I was less acquainted with, such as mechanical and coding. I think I need to push myself more to acquire new coding and technical knowledge. Fortunately, within our team collaboration, I inevitably became more exposed to diverse knowledge and learned how to collaborate with people from different backgrounds and fields.
