--- a/weekly-reports/2023_10_19report.md
+++ b/weekly-reports/2023_10_19report.md
@@ -1,6 +1,6 @@
 # Report 7 - Week of 10/19/2023 #
 
-### During this week, I worked on the final construction of the meditation flower and assited the documentation of the project and video-editing of the final video presentation.
+### During this week, I worked on the final construction of the meditation flower and assisted the documentation of the project and video-editing of the final video presentation.
 
 ---
 
